<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.polar.android_seed.fragments.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/usuario_usuario" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/usuario_nombre" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/usuario_correo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/usuario_telefono" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/usuario_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp" />

            <TextView
                android:id="@+id/usuario_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp" />

            <TextView
                android:id="@+id/usuario_correo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp" />

            <TextView
                android:id="@+id/usuario_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp" />

        </LinearLayout>


    </LinearLayout>

</FrameLayout>
